Story Editor Project/Week1 Notes

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="/frontend_dev_2/css/base.css">
     <link rel="shortcut icon" href="/frontend_dev_2/quiblyFavicon.ico" type="image/x-icon">
 </head>
+<body>
 <header>
-    <h1>Portfolio</h1>
+    <h1>Adam Dutson's Portfolio</h1>
     <h2>WDD 330 - Web Frontend Development II</h2>
 </header>
-<body>
-    <div id="imgContainer"><img src="/frontend_dev_2/images/Adam Dutson-1 (1).jpg" alt="Adam Dutson's Portrait" width="200" height="250"></div>
-</body>
+<main>
+    <div id="imgContainer"><img src="/frontend_dev_2/images/Mutt Cutts.jpg" alt="Adam Dutson's Portrait" width="500" height="280"></div>
+    <ol id="indexList"></ol>
+</main>
 <footer>
     <p id="updated"></p>
     <p id="year"></p>
 </footer>
 <script src="/frontend_dev_2/js/main.js"></script>
+</body>
 </html>
