--- a/html/week1.html
+++ b/html/week1.html
@@ -41,6 +41,6 @@
     <p id="updated"></p>
     <p id="year"></p>
 </footer>
-<script src="/frontend_dev_2/js/main.js"></script>
+<script src="/frontend_dev_2/js/base.js"></script>
 </body>
 </html>
