updated portfolio index for week 1 layout

--- a/html/week1.html
+++ b/html/week1.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     h2, h3 {text-decoration: underline;}
-    ul li {list-style: disc;}
+    ul li {list-style: disc; line-height: 1.3;}
 </style>
 <body>
 <header>
@@ -35,7 +35,6 @@
         <li>What's the difference between cookies and local storage? <a href="https://medium.datadriveninvestor.com/cookies-vs-local-storage-2f3732c7d977" target="_blank">Link to the answer I found.</a></li>
         <li>Does this layout of notes and links to projects work for you?</li>
     </ul>
-
 </main>
 <footer>
     <p id="updated"></p>
