--- a/html/story_editor.html
+++ b/html/story_editor.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Story Writer</title>
+  <link rel="shortcut icon" href="/frontend_dev_2/quiblyFavicon.ico" type="image/x-icon">
   <script>
       function loadStory(){
           let storyName = document.querySelector('#storyName').value
