--- a/html/week1.html
+++ b/html/week1.html
@@ -19,7 +19,7 @@
 </header>
 <main>
     <h2>Week 1</h2>
-    <h3>Notes</h3>
+    <h3>Notes/Activities</h3>
     <p>Well, I have a notes page built for Week 1.</p>
     <p>Please let me know if you want me to adjust my layout for notes and assignments.</p>
     <ul>
