--- a/html/week1.html
+++ b/html/week1.html
@@ -34,6 +34,8 @@
         <li>How much CSS do I add to my Story Editor program? It said the yellow background was enough I guess.</li>
         <li>What's the difference between cookies and local storage? <a href="https://medium.datadriveninvestor.com/cookies-vs-local-storage-2f3732c7d977" target="_blank">Link to the answer I found.</a></li>
         <li>Does this layout of notes and links to projects work for you?</li>
+        <li>Why don't more people use the input type attribute for inputs? It's so easy to improve the mobile experience with this.</li>
+        <li>STOP USING POP-UPS! That made me laugh because it is so true.</li>
     </ul>
 </main>
 <footer>
