--- a/html/week2.html
+++ b/html/week2.html
@@ -35,6 +35,7 @@
     <h3>Questions </h3>
     <ul>
         <li>I didn't have any questions on the reading. I learned a few new things from it and the rest I felt pretty comfortable with.</li>
+        <li>In regards to the Reading assignment instructions, it mentions, "Don't skip the code examples! Make sure to spend time reviewing these. With the book we are using you can actually interact with the code samples directly." How do you want us to interact with the examples? I look at them and I know where to find the github reference for the code. Is that all that means? Am I supposed to be manipulating code in the sitepoint book directly or is it just meaning to use the github code references?</li>
         <li>In the team activity, the solution code (lines 69-81 for requirement 3) was only using 2 inputs for adding. Wasn't it supposed to use all three inputs?</li>
     </ul>
 </main>
