--- a/html/week3.html
+++ b/html/week3.html
@@ -36,6 +36,10 @@
             <p>I worked on this code on my own after our team meeting.</p>
             <p>I found myself overcomplicating this and did well to simplify my functions and how they were all working together.</p>    
         </li>
+        <li>
+            <a href="/frontend_dev_2/html/w03Reading/events.html" target="_blank">W03 Reading Activity</a>
+            <p>This is some of my code example activity from the reading.</p>
+        </li>
     </ul>
     <h3>Questions </h3>
     <ul>
