updated notes and activities for week 4

--- a/html/week4.html
+++ b/html/week4.html
@@ -25,12 +25,34 @@
         <li>
             <a href="/frontend_dev_2/html/w04TeamActivity.html" target="_blank">W04 Team Activity</a>
             <p>We did this code as a team during our group assignment and completed 1 of the stretch challenges.</p>
-            <p>I worked on the code for this a bit after our team meeting to clean it up a bit and work with grid and some options. I think it turned out nice.</p>       
+            <p>I worked on the code after our team meeting to clean it up a bit and work with grid and some options. I think it turned out nice.</p>       
+        </li>
+        <li>
+            <a href="/frontend_dev_2/html/w04Reading/search.html" target="_blank">W04 Reading search.html</a>
+            <p>I don't understand why you'd want to use this functionality instead of a placeholder in html. It was nice to go through it though.</p> 
+        </li>
+        <li>
+            <a href="/frontend_dev_2/html/w04Reading/hero.html" target="_blank">W04 Reading hero.html</a>
+            <p>Working with superheroes keeps the coding interesting for objects.</p>
+            <p>I didn't have questions much while following along but this was really helpful for form handling.</p> 
+        </li>
+        <li>
+            <h3>Object-Oriented Reading</h3>
+            <p>I appreciated your comments on Object programming with JavaScript at the zoom meeting this week.</p>
+            <p>Object programming concepts of polymorphism and inheritence can be hard to grasp sometimes. Your simple, candid explanation made it really easy for me to grasp as I went through the reading this week. Thank you.</p>
+        </li>
+        <li>
+            <h3>Modular JavaScript Reading</h3>
+            <p>This helped me a lot to understand more about why I'm doing things so different when I'm coding in Node JS.</p>
+            <p>Exporting and requiring modules is common and now I know what Common JS references are talking about. Maybe my NodeJS code will work better now that I know why it is giving me weird errors at times.</p>
         </li>
     </ul>
     <h3>Questions </h3>
     <ul>
-        <li></li>
+        <li>
+            <p>I gained a lot from the information about prototypes. Are object prototype changes used a lot in the industry? Or are object class methods more common?</p>
+            <p>I have seen few examples of classes or constructor statements in JavaScript documentation and troubleshooting outside of this Novice to Ninja book. Why aren't classes more promenently used/shown for solutions?</p>
+        </li>
     </ul>
 </main>
 <footer>
