--- a/html/w05TeamActivity/index.html
+++ b/html/w05TeamActivity/index.html
@@ -16,7 +16,7 @@
         <div id="details"></div>
     </main>
     <footer></footer>
-    <script src="./main.js" type="module"></script>
+    <script type="module" src="./main.js"></script>
     <script src="./hikes.js"></script>
 </body>
 </html>
