--- a/html/week5.html
+++ b/html/week5.html
@@ -26,33 +26,19 @@
             <a href="/frontend_dev_2/html/w05TeamActivity/index.html" target="_blank">W05 Team Activity</a>
             <p>This was a productive Team Activity. Most of us came prepared and everyone contributed to some aspect of the code.</p>
             <p>I worked on the stretch challenge after the team meeting because we used all of our time on the main topics.</p>
-            <p>I took a little bit of a different approach on the stretch goal by creating a hovering details list that displays where the mouse pointer is. I hope that is ok.</p>      
+            <p>I took a little bit of a different approach on the stretch goal by creating a hovering Details List that displays where the mouse pointer is. I hope that is ok.</p>      
         </li>
         <li>
-            <a href="/frontend_dev_2/html/w04Reading/search.html" target="_blank">W04 Reading search.html</a>
-            <p>I don't understand why you'd want to use this functionality instead of a placeholder in html. It was nice to go through it though.</p> 
-        </li>
-        <li>
-            <a href="/frontend_dev_2/html/w04Reading/hero.html" target="_blank">W04 Reading hero.html</a>
-            <p>Working with superheroes keeps the coding interesting for objects.</p>
-            <p>I didn't have questions much while following along but this was really helpful for form handling.</p> 
-        </li>
-        <li>
-            <h3>Object-Oriented Reading</h3>
-            <p>I appreciated your comments on Object programming with JavaScript at the zoom meeting this week.</p>
-            <p>Object programming concepts of polymorphism and inheritence can be hard to grasp sometimes. Your simple, candid explanation made it really easy for me to grasp as I went through the reading this week. Thank you.</p>
-        </li>
-        <li>
-            <h3>Modular JavaScript Reading</h3>
-            <p>This helped me a lot to understand more about why I'm doing things so different when I'm coding in Node JS.</p>
-            <p>Exporting and requiring modules is common and now I know what Common JS references are talking about. Maybe my NodeJS code will work better now that I know why it is giving me weird errors at times.</p>
+            <h3>Reading: Testing and Debugging</h3>
+            <p>I tried turning on strict mode for the team activity code this week. It didn't add any issues or errors, which is good I guess. I'll be using it going forward.</p>
+            <p>I think it's pretty neat how 'throw' works to provide the line and location of the error in the results.</p>
+            <p>Jest seems a helpful tool but it also seems like building the test files would have to happen after you build the code. Is that really an efficient process?</p>
         </li>
     </ul>
     <h3>Questions </h3>
     <ul>
         <li>
-            <p>I gained a lot from the information about prototypes. Are object prototype changes used a lot in the industry? Or are object class methods more common?</p>
-            <p>I have seen few examples of classes or constructor statements in JavaScript documentation and troubleshooting outside of this Novice to Ninja book. Why aren't classes more promenently used/shown for solutions?</p>
+            <p>How much time is spent building test files in industrial processes? It seems like it take a lot of time to debug code this way when you are pretty much defining function callbacks twice.</p>
         </li>
     </ul>
 </main>
