--- a/html/week7.html
+++ b/html/week7.html
@@ -24,10 +24,11 @@
     <ul>
         <li>
             <p>In the reading, the many examples for using functions is kind of neat. I understand how variable scopes work, but it brought a lot of examples for functional programming.</p>     
+            <p>Another thing that stood out to me in the reading is the importance of Ajax calls. I understand better now when to use those calls and how they help the overall efficiency of processing.</p>
         </li>
         <li>
             <a href="./ajaxExample/ajax.html" target="_blank">Ajax Example from reading</a>
-            <p>I like the error handling layout they use with these.</p>     
+            <p>I like the error handling layout they use with these. I'm going to be focusing on error handling first in my code going forward.</p>     
         </li>
         <li>
             <a href="./todoExample/todo.html" target="_blank">ToDo Example from reading</a>
