team assignment week8 finished

--- a/html/w08TeamActivity/swapi.html
+++ b/html/w08TeamActivity/swapi.html
@@ -13,6 +13,7 @@
         <div id="people"></div>
         <button type="button" id="prevBtn">Prev</button>
         <button type="button" id="nextBtn">Next</button>
+        <div id="pageButtons"></div>
         <p id="message"></p>
         <p id="pages"></p>
     </main>
