week9 notes and added week9teamactivity

--- a/html/week9.html
+++ b/html/week9.html
@@ -36,17 +36,18 @@
                 <input id='number' type='number' name='number' min=1 value='20'>
                 <button type='submit'>Submit</button>
             </form>
-    <div id='output'></div>
+            <div id='output'></div>
+            <p>I'm not really sure how to get this working right. The worker code is supposed to receive a response when the factorization process has ended. Right now it just hangs the message 'This could take a while ...'. Which is an understatement considering it will never go away.</p>
         </li>
-        <!-- <li>
-            <a href="./animation/animation.html" target="_blank">Animation Example from reading</a>
-            <p></p>     
-        </li> -->
+        <li>
+            <p>I couldn't get this to work either. It looks like the websocket.org service isn't available anymore.</p>
+            <a href="./websocket/websocket.html" target="_blank">Websocket Example from reading</a>
+        </li>
     </ul>
     <h3>Questions</h3>
     <ul>
         <li>
-            <p></p>
+            <p>I didn't really understand why the worker example wasn't working. The reading mentioned displaying protections in the browser so I could run it locally.</p>
         </li>
     </ul>
 </main>
