--- a/html/week9.html
+++ b/html/week9.html
@@ -37,7 +37,7 @@
                 <button type='submit'>Submit</button>
             </form>
             <div id='output'></div>
-            <p>I'm not really sure how to get this working right. The worker code is supposed to receive a response when the factorization process has ended. Right now it just hangs the message 'This could take a while ...'. Which is an understatement considering it will never go away.</p>
+            <p>I'm not really sure how to get this working right. The worker code is supposed to receive a response when the factorization process has ended. Right now it just hangs the message 'This could take a while ...'.</p>
         </li>
         <li>
             <p>I couldn't get this to work either. It looks like the websocket.org service isn't available anymore.</p>
