updated for dynamic detail and search

--- a/pokeTeam/poke.html
+++ b/pokeTeam/poke.html
@@ -27,8 +27,8 @@
                 <fieldset>
                     <h2>Search for Pokemon</h2>
                     <label for="name">by Name<input type="text" id="name"></label>
-                    <label for="ability">by Ability<input type="text" id="ability"></label>
-                    <label for="location">by Location<input type="text" id="location"></label>
+                    <p>If you leave 'by Name' field blank this will search all pokemon.</p>
+                    <button type="button" id="findBtn">Find Pokemon</button>
                 </fieldset>
                 <fieldset>
                     <h2>Drop Downs for Filtering</h2>
@@ -45,6 +45,6 @@
         <div id="year"></div>
         <div id="updated"></div>
     </footer>
-    <script src="./poke.js"></script>
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
