--- a/pokeTeam/poke.html
+++ b/pokeTeam/poke.html
@@ -25,13 +25,13 @@
         <div id="filter">
             <form>
                 <fieldset>
-                    <h2>Search for Pokemon</h2>
+                    <legend>Search for Pokémon</legend>
                     <label for="name">by Name<input type="text" id="name"></label>
-                    <p>If you leave 'by Name' field blank this will search all pokemon.</p>
+                    <p>If you leave 'by Name' field blank this will search all Pokémon.</p>
                     <button type="button" id="findBtn">Find Pokemon</button>
                 </fieldset>
                 <fieldset>
-                    <h2>Drop Downs for Filtering</h2>
+                    <legend>Drop Downs for Filtering</legend>
                     <label for="type">by Type<select name="type" id="type"></select></label>
                     <label for="shape">by Shape<select name="shape" id="shape"></select></label>
                     <label for="habitat">by Habitat<select name="habitat" id="habitat"></select></label>
