--- a/pokeTeam/poke.html
+++ b/pokeTeam/poke.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div id="ball1"><img src="./PokeBall.png" alt="Pokemon Ball"></div>
-        <h1>Pokémon</h1>
+        <h1>Pokédex</h1>
         <div id="ball2"><img src="./PokeBall.png" alt="Pokemon Ball"></div>
     </header>
     <main>
