--- a/html/week14.html
+++ b/html/week14.html
@@ -21,14 +21,16 @@
     <h2>WDD 330 - Web Frontend Development II</h2>
 </header>
 <main>
-    <h2>Week 13</h2>
+    <h2>Week 14</h2>
     <h3>Notes/Activities</h3>
     <ul>
         <li>
             <h3>Final Portfolio Submission - Self Evaluation Video</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/_cJ174tT4Go" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </li>
+        <hr>
         <li>
+            <h3>Link to my Block 2 Challenge - Pokedex App</h3>
             <a href="../pokeTeam/poke.html" target="_blank">Block 2 Challenge - Pokedex Application</a>
             <p>Click the Find Pokemon button first.</p>
             <div><img src="../images/Screenshot 2022-07-15 075416.jpg" alt="Pokedex application display"></div>   
